--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <!-- INICIO MAIN -->
-        <main class="h-100">
+        <main class="h-100 bg-dark text-white">
             <!-- PRIMERA FILA QUE OCUPA TODA LA SECCION ABOUT ME -->
             <section class="row row-cols-1"> 
                 <!-- COL IMAGEN Y MAS -->
@@ -22,8 +22,30 @@
                 <!-- COL CONTENT (GRID) -->
                 <div class="p-0 m-0 col" id="contenedor-contenido">
                     <!-- COMIENZO -->
-                    <div class="h-100">
-
+                    <div class="h-100 row p-4 row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-2">
+                        <!-- Contenido principal -->
+                        <div id="contenido" class="w-sm-100 col-md-8 col-lg-9">
+                            <h1>ELON MUSK, 53</h1>
+                            <p id="presentacion">
+                                Mi nombre es Elon Musk. A lo largo de mi trayectoria he fundado empresas para resolver problemas que muchos consideraban imposibles: desde revolucionar el transporte con Tesla, hasta hacer realidad los viajes
+                                 interplanetarios con SpaceX. No busco simplemente adaptarme al futuro, sino construirlo.
+                                Estoy interesado en colaborar con organizaciones que compartan una visión audaz,
+                                 que no teman al riesgo y que estén dispuestas a cambiar el mundo desde sus cimientos.
+                                  Si eso resuena contigo, entonces tenemos mucho de qué hablar.
+                            </p>
+                        </div>
+                        <!-- FIN Contenido principal -->
+                        <!-- ASIDE CARD -->
+                        <div id="asideCard" class="card col col col-md-4 col-lg-3">
+                            <div class="card-body">
+                                <h2 class="card-title pt-2">Links interesantes</h2>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item"><a href="https://es.wikipedia.org/wiki/Elon_Musk">Biografia</a></li>
+                                    <li class="list-group-item"><a href="https://github.com/Eduu115/AboutMePractice">Repositorio</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- FIN ASIDE CARD -->
                     </div>
                 </div>
                 <!-- FIN COL CONTENT -->
